--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tic-tac-toe</title>
-    <link href="tic.css" rel="stylesheet">
-    <script src="tic.js" defer></script>
+    <link href="index.css" rel="stylesheet">
+    <script src="index.js" defer></script>
   </head>
   <body onload="initialize()">
     <h1>Tic-Tac-Toe</h1>
